example: reduce style.css
No need to give specific font name, just use sans-serif.

Signed-off-by: Gaetan Rivet <grive@u256.net>

--- a/example/style.css
+++ b/example/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Liberation Sans, Arial, sans-serif;
+  font-family: sans-serif;
   max-width: 80ch;
   padding: 2ch;
   margin: auto; }
